--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,6 @@
-
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#1F1F1F"
+secondaryBackgroundColor = "#262730"
+textColor = "#FFFFFF"
+font = "serif"
